# Fred-Modeling

./: Model_v1.ipynb  pyproject.toml
